--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ safe: true
 
 
 # edit here to achieve your personal greatness
-url: http://dwlarson10.github.io/
+url: https://dwlarson10.github.io/
 baseurl: /datadanlarson/
 title: Dan Larson
 author: Dan Larson
