--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl: /datadanlarson/
 title: Dan Larson
 author: Dan Larson
 description: Personal blog and resume
-avatar: profile.png
+avatar: profile2.png
 email: dwlarson10@gmail.com
 github: dwlarson10 # username
 twitter: datadanlarson
