--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ safe: true
 
 # edit here to achieve your personal greatness
 url: https://dwlarson10.github.io/
-baseurl: /danlarson.io/
+baseurl: /
 title: Dan Larson
 author: Dan Larson
 description: Personal blog and resume
