--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ email: dwlarson10@gmail.com
 github: dwlarson10 # username
 twitter: datadanlarson
 linkedin: datadanlarson
-stackoverflow: username   #e.g: users/2735833/proton1h1
+stackoverflow: user:8696245   #e.g: users/2735833/proton1h1
 #Comment out if you don't want disqus
 disqus: username
 google_analytics: UA-69391421-1
