--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ twitter: datadanlarson
 linkedin: datadanlarson
 stackoverflow: user:8696245   #e.g: users/2735833/proton1h1
 #Comment out if you don't want disqus
-disqus: username
-google_analytics: UA-69391421-1
+#disqus: username
+google_analytics: UA-63826812-4
 
 
 # needed for travis-ci build
